# guillaume

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  COMPONENTS.md  CONTRIBUTING.md  Doxyfile  ENTITIES.md  README.md  ROADMAP.md  SYSTEMS.md  TODO.md  glew  pyproject.toml  pyrightconfig.json  requirements.txt  test_vector.cpp  z_index_demo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  question-about-the-project.md
.github/workflows/: black.yml  build.yml  cmake-multi-platform.yml  cmake.yml  docs.yml  documentations.yml  pyright.yml  pytest.yml  python.yml
cmake/: CommonFunctions.cmake
docs/: ARCHITECTURE.md  CMakeLists.txt  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  DEVELOPMENT.md  ECS.md  HOW_GUILLAUME_WORKS.md  QUICK_REFERENCE.md  README.md
docs/api/: component.md  context.md  logger.md
documentations/: ARCHITECTURE.md  CMakeLists.txt  HOW_GUILLAUME_WORKS.md  TECHNICAL_CHOICES.md
examples/: CMakeLists.txt  README.md  basic_window.cpp  button_demo.cpp  component_showcase.cpp  custom_component.cpp
examples/button_counter/: CMakeLists.txt  README.md
examples/hello_world/: CMakeLists.txt  README.md
examples/sdl3_opengl/: CMakeLists.txt  README.md
examples/sdl3_opengl/headers/: my_event_handler.hpp  my_renderer.hpp
examples/sdl3_opengl/sources/: main.cpp  my_event_handler.cpp  my_renderer.cpp
examples/sdl3_opengl_renderer/: CMakeLists.txt  README.md
examples/sdl3_opengl_renderer/headers/: my_renderer.hpp
examples/sdl3_opengl_renderer/sources/: main.cpp  my_renderer.cpp
examples/simple_application/: CMakeLists.txt  README.md
examples/simple_application/headers/: application.hpp  circle_component.hpp  circle_render_system.hpp  event_handler.hpp  move_system.hpp  rectangle_component.hpp  rectangle_render_system.hpp  renderer.hpp  rotation_system.hpp  simple_application.hpp  simple_event_handler.hpp  simple_renderer.hpp  simple_window.hpp  text_render_system.hpp  triangle_component.hpp  triangle_render_system.hpp  window.hpp
examples/simple_application/headers/panels/: default_panel.hpp
examples/simple_application/headers/scenes/: main.hpp  settings.hpp
examples/simple_application/headers/shapes/: rectangle.hpp
examples/simple_application/sources/: application.cpp  event_handler.cpp  main.cpp  renderer.cpp  simple_application.cpp  simple_event_handler.cpp  simple_renderer.cpp  simple_window.cpp  window.cpp
examples/simple_application/sources/panels/: default_panel.cpp
examples/simple_application/sources/scenes/: main.cpp  settings.cpp
examples/simple_application/sources/shapes/: rectangle.cpp
guillaume/: __init__.py  application.py  component.py
headers/: application.hpp  button.hpp  color.hpp  component.hpp  component_registry.hpp  component_tree.hpp  composable.hpp  container.hpp  ecs.hpp  event.hpp  event_bus.hpp  event_handler.hpp  guillaume.h  guillaume.hpp  label.hpp  metadata.hpp  point.hpp  primitive.hpp  properties.hpp  property.hpp  renderer.hpp  state.hpp  system.hpp  text.hpp  vector.hpp  vertex.hpp  window.hpp
headers/components/: container.hpp  text.hpp
headers/ecs/: component_registry.hpp  component_registry_filler.hpp  ecs.hpp  entity.hpp  entity_filler.hpp  system.hpp  system_filler.hpp  system_registry.hpp
headers/entities/: button.hpp
headers/guillaume/: application.hpp  color.hpp  component.hpp  component_registry.hpp  componentable.hpp  config.hpp  container.hpp  context.hpp  drawable.hpp  ecs.hpp  event.hpp  eventable.hpp  font.hpp  local_storage.hpp  logger.hpp  metadata.hpp  primitivable.hpp  primitive.hpp  rectangle.hpp  renderer.hpp  scene.hpp  scene_manager.hpp  session_storage.hpp  shape.hpp  storage.hpp  text.hpp  theme.hpp  vector.hpp  window.hpp
headers/primitives/: polygon.hpp  rectangle.hpp  text.hpp  triangle.hpp
headers/properties/: layout_property.hpp  style_property.hpp
headers/sdl3_renderer/: sdl3_renderer.hpp
sources/: application.cpp  button.cpp  component.cpp  component_registry.cpp  component_tree.cpp  composable.cpp  container.cpp  drawable.cpp  ecs.cpp  event.cpp  event_bus.cpp  event_handler.cpp  font.cpp  guillaume.c  guillaume.cpp  label.cpp  local_storage.cpp  main.c  main.cpp  metadata.cpp  point.cpp  primitive.cpp  properties.cpp  property.cpp  renderer.cpp  scene.cpp  scene_manager.cpp  session_storage.cpp  shape.cpp  state.cpp  system.cpp  text.cpp  theme.cpp  vector.cpp  vertex.cpp  window.cpp
sources/components/: borders.cpp  bound.cpp  children.cpp  click.cpp  color.cpp  container.cpp  focus.cpp  hover.cpp  interaction.cpp  parent.cpp  relationship.cpp  render.cpp  text.cpp  transform.cpp
sources/drawables/: rectangle.cpp  text.cpp
sources/ecs/: component.cpp  component_registry.cpp  component_registry_filler.cpp  component_storage.cpp  component_type_id.cpp  ecs.cpp  entity.cpp  entity_builder.cpp  entity_director.cpp  entity_filler.cpp  entity_registry.cpp  leaf_entity_builder.cpp  leaf_entity_filler.cpp  node_entity_builder.cpp  node_entity_filler.cpp  system.cpp  system_filler.cpp  system_registry.cpp  tree_component_registry_filler.cpp
sources/entities/: button.cpp  icon.cpp  panel.cpp  text.cpp
sources/event/: event_bus.cpp  event_handler.cpp  event_subscriber.cpp
sources/guillaume/: color.cpp  component.cpp  componentable.cpp  config.cpp  container.cpp  context.cpp  font.cpp  logger.cpp  rectangle.cpp  vector.cpp
sources/primitives/: polygon.cpp  rectangle.cpp  text.cpp  triangle.cpp
sources/properties/: layout_property.cpp  style_property.cpp
sources/sdl3_renderer/: sdl3_renderer.cpp
sources/shapes/: circle.cpp  rectangle.cpp  triangle.cpp
sources/systems/: click.cpp  glyph_render.cpp  hover.cpp  interaction.cpp  keyboard.cpp  keyboard_control.cpp  measure_text.cpp  rectangle_render.cpp  render.cpp  text_input.cpp  text_render.cpp
src/: component.py  properties.py
tests/: CMakeLists.txt  test_application.py  test_component.py  test_properties.py
tests/headers/: test_application.hpp  test_color.hpp  test_component.hpp  test_container.hpp  test_drawable.hpp  test_ecs.hpp  test_event_handler.hpp  (+14 more)
(+284 files in other folders)
