[project]
name = "guillaume"
version = "0.1.0"
authors = [
  { name="Clément Antoine XAVIER", email="clement-antoine.xavier@epitech.eu" },
  { name="Julien FERDINAND", email="julien.ferdinand@epitech.eu" },
  { name="Nathan MAILLOT", email="nathan.maillot@epitech.eu" },
  { name="Léo SAUTRON", email="leo.sautron@epitech.eu" },
]
description = "The high-performance Python XR UI framework inspired by React, featuring custom rendering and modular architecture for AR/VR applications."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Typing :: Typed",
  "Programming Language :: C++",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/etib-corp/guillaume"
Issues = "https://github.com/etib-corp/guillaume/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

